- Adjust default font size - Fix spacing between comments and the comment
2005-09-18  Thomas Wood  <thos@gnome.org>

	* default.css:
	- Adjust default font size
	- Fix spacing between comments and the comment icon

	* includes/art_listings.inc.php:
	* includes/comments.inc.php:
	* includes/common.inc.php:

	- Comments count in listings

--- a/default.css
+++ b/default.css
@@ -8,6 +8,7 @@ body {
 	margin-top: 0;
 	margin-left: 0;
 	margin-right: 0;
+	font-size: 10pt;
 }
 
 h1{
@@ -23,10 +24,11 @@ h1{
 	margin-bottom: 0.2em;
 	clear: left;
 }
-.subtitle{
+
+small, .subtitle{
 	color: #5c5c5c;
 	font-family:sans-serif;
-	font-size: 0.9em;
+	font-size: 0.8em;
 	margin-bottom: 0.7em;
 }
 
@@ -35,6 +37,11 @@ h1{
 	font-family: sans-serif;
 	font-size: 1.2em;
 	text-decoration: none;
+}
+
+img {
+	border: 0px;
+	vertical-align: middle;
 }
 
 img.header {
@@ -277,7 +284,7 @@ div.icon_view {
 	background-image: url('/images/site/stock_draw-callouts.png');
 /*	background-image: url('/images/site/commentbd.png'); */
 	background-repeat: no-repeat;
-	padding-left: 24px;
+	padding-left: 28px;
 }
 
 div.abuse {
